Поправил кафку через евент паблишинг, сделл рефакторинг